scripts/nullaway/annotator/url0d084b4168_zhourui392_BaiduPicDown_tgz-pJ8-org_json_TestJ8.txt
../annotator/url0d084b4168_zhourui392_BaiduPicDown_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:79: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url0d084b4168_zhourui392_BaiduPicDown_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:146: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/url0d084b4168_zhourui392_BaiduPicDown_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:210: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url0d084b4168_zhourui392_BaiduPicDown_tgz-pJ8-org_json_TestJ8/src/zz/spider/Spider.java:44: error: [NullAway] passing @Nullable parameter 'ZZConfig.loaclFileDir' where @NonNull is required
                        File savePathDir = new File(new File(ZZConfig.loaclFileDir).getAbsolutePath() +"\\" + url.getDirName());
                                                                     ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
